--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ name = "pypi"
 flask = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
-yt-download = "*"
+youtube-dl = "*"
+requests = "*"
 
 [dev-packages]
 
